[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://QuitConfirmation.tscn" type="PackedScene" id=2]
[ext_resource path="res://main_menu_bg_small.png" type="Texture" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -25.0
margin_right = 60.0
margin_bottom = 33.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="StartButton" type="Button" parent="ButtonsContainer"]
margin_right = 82.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( -777, -293 )
text = "New Game"

[node name="LoadButton" type="Button" parent="ButtonsContainer"]
visible = false
margin_top = 24.0
margin_right = 84.0
margin_bottom = 44.0
text = "Load Game"

[node name="CreditsButton" type="Button" parent="ButtonsContainer"]
margin_top = 24.0
margin_right = 82.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( -777, -293 )
text = "Credits"

[node name="QuitButton" type="Button" parent="ButtonsContainer"]
margin_top = 48.0
margin_right = 82.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( -777, -293 )
text = "Exit Game"

[node name="QuitConfirmation" parent="." instance=ExtResource( 2 )]

[node name="Controls" type="RichTextLabel" parent="."]
margin_left = 17.0
margin_top = 21.0
margin_right = 296.0
margin_bottom = 173.0
text = "WASD: Move
Space: Jump
Mouse move: Look
Left click: Place block
Right click: Remove block
C: Change 1st/3rd person camera
1, 2, 3, 4: Change block type"

[node name="Credits" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = -472.0
margin_bottom = -300.0

[node name="ColorRect" type="ColorRect" parent="Credits"]
margin_left = 192.0
margin_top = 171.0
margin_right = 948.0
margin_bottom = 431.0
color = Color( 0.12549, 0.12549, 0.12549, 0.843137 )

[node name="CreditsText" type="RichTextLabel" parent="Credits"]
margin_left = 203.0
margin_top = 184.0
margin_right = 934.0
margin_bottom = 438.0
custom_constants/line_separation = 6
text = "Credits

Godot Engine developers and documentation contributors
Farm Animals Set - Vertexcat - https://vertexcat.itch.io/farm-animals-set
godot-sqlite Plugin - Piet Bronders et al. - https://github.com/2shady4u/godot-sqlite
Adrian Biaglioni -  Bunnyhopping from the Programmer's Perspective - adrianb.io/2015/02/14/bunnyhop.html
Creators of the dozens of other tutorials I used for learning, too many to enumerate them
University of Helsinki
My wife for supporting me
Me

I apologize if I forgot someone"

[node name="BackButton" type="Button" parent="Credits"]
margin_left = 466.0
margin_top = 443.0
margin_right = 565.0
margin_bottom = 463.0
text = "Back to Menu"

[connection signal="pressed" from="ButtonsContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ButtonsContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="ButtonsContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="ButtonsContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="confirmed" from="QuitConfirmation" to="." method="_on_QuitConfirmation_confirmed"]
[connection signal="pressed" from="Credits/BackButton" to="." method="_on_BackButton_pressed"]
